Bug 338834 - F9 shortcut key does not Check Query of SQL query in Query Design view SQL mode
Summary: F9 shortcut key does not Check Query of SQL query in Query Design view SQL mode
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Queries (other bugs)
Version First Reported In: 2.9 Alpha
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: 2.9
Assignee: Kexi Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2014-09-05 21:27 UTC by Ian Balchin
Modified: 2019-02-18 19:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.0
Sentry Crash Report:
staniek: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Balchin 2014-09-05 21:27:51 UTC
F9 should initiate the same action as the Verify Query button for a written SQL query in Query Design view, SQL mode, but this does not occur.

Reproducible: Always

Steps to Reproduce:
1. Open a Query in Design view
2. Make a change to the SQL query to render it invalid
3. Press F9
4. Click the 'Check Query' icon

Actual Results:  
Checking the SQL query using the F9 shortcut produces no output. Clicking the 'Check Query' icon produces the message 'The Query is incorrect'.

Expected Results:  
That the F9 shortcut would act the same as the 'Check Query' icon.

This shortcut is not shown on the right-click menu

The earlier list of shortcuts shows this as functional under the Data view which is surely incorrect because you cannot move into Data mode from an incorrect SQL query.
Comment 1 Jarosław Staniek 2014-11-03 08:35:56 UTC
It's a conflict with Kate's (part) shortcut for "Show folding markers" action.

One solution could be to change to something else. MS Access lacks the action; users have to actually switch to data mode to check validity.
The closest thing I (quickly) found is MS SQL Server's Query Analyzer Shortcuts offer CTRL+F5 for "Parse query and check syntax":

http://blog.sqlauthority.com/2007/01/20/sql-server-query-analyzer-shortcuts/

Would it be OK to change?
Comment 2 Roman Shtemberko 2015-01-19 09:26:54 UTC
Git commit 1ba3fd5a5bcff842ec27ee27e65cc1808eb0dd71 by Roman Shtemberko.
Committed on 19/01/2015 at 09:25.
Pushed by rshtemberko into branch 'calligra/2.9'.

Add Ctrl+F5 shortcut for Check Query of SQL query in Query Design view SQL.
REVIEW:122051

M  +2    -1    kexi/plugins/queries/kexiquerydesignersql.cpp

http://commits.kde.org/calligra/1ba3fd5a5bcff842ec27ee27e65cc1808eb0dd71