Add Ctrl+F5 shortcut for Check Query of SQL query in Query Design view SQL.

BUG:338834
REVIEW:122051